--- a/index.html
+++ b/index.html
@@ -107,45 +107,42 @@
             <div class="col-12">
                 <h1 class="main-title">Conhecimentos<span>.</span></h1>
             </div>
-            <div class="skills-content">
-                <div class="box-skills">
-                    <button class="btn-skills active"><a href="#boxhtml">HTML</a></button>
-                    <button class="btn-skills"><a href="#boxcss">CSS</a></button>
-                    <button class="btn-skills"><a href="#boxjs">JavaScript</a></button>
-                    <button class="btn-skills"><a href="#boxbs">bootstrap</a></button>
-                </div>
-                <div class="inform-skill same-box-1 toggle" id="boxhtml">
-                    <h6>HyperText Markup Language</h6>
-                    <span>Tim Berners-Lee - 1991</span> 
-                     <p class="describe-info">
-                         HTML é a liguagem base da internet para desenvolvimento de sites. 
-                         Foi criada para ser de fácil entendimento por seres humanos e também por máquinas, como por exemplo o Google ou outros sistemas que percorrem a internet capturando informações. 
-                     </p>
-                </div>
-                <div class="inform-skill same-box-1 toggle" id="boxcss">
-                    <h6>BOOSTRAP</h6>
-                    <span>Tim Berners-Lee - 1991</span> 
-                     <p class="describe-info">
-                         HTML é a liguagem base da internet para desenvolvimento de sites. 
-                         Foi criada para ser de fácil entendimento por seres humanos e também por máquinas, como por exemplo o Google ou outros sistemas que percorrem a internet capturando informações. 
-                     </p>
-                </div>
-                <div class="inform-skill same-box-1 toggle" id="boxjs">
-                    <h6>CSS</h6>
-                    <span>Tim Berners-Lee - 1991</span> 
-                     <p class="describe-info">
-                         HTML é a liguagem base da internet para desenvolvimento de sites. 
-                         Foi criada para ser de fácil entendimento por seres humanos e também por máquinas, como por exemplo o Google ou outros sistemas que percorrem a internet capturando informações. 
-                     </p>
-                </div>
-                <div class="inform-skill same-box-1 toggle" id="boxbs">
-                    <h6>JS</h6>
-                    <span>Tim Berners-Lee - 1991</span> 
-                     <p class="describe-info">
-                         HTML é a liguagem base da internet para desenvolvimento de sites. 
-                         Foi criada para ser de fácil entendimento por seres humanos e também por máquinas, como por exemplo o Google ou outros sistemas que percorrem a internet capturando informações. 
-                     </p>
-                </div>
+            <div class="wrapper">
+                <input type="radio" name="slider" checked id="btn-html">
+                <input type="radio" name="slider" id="btn-css">
+                <input type="radio" name="slider" id="btn-js">
+                <input type="radio" name="slider" id="btn-bs">
+                <input type="radio" name="slider" id="btn-node">
+                <nav>
+                    <label for="btn-html" class="btn-html">Html</label>
+                    <label for="btn-css" class="btn-css">Css</label>
+                    <label for="btn-js" class="btn-js">JavaScript</ion-icon></label>
+                    <label for="btn-bs" class="btn-bs">Boostrap</label>
+                    <label for="btn-node" class="btn-node">Github</label>
+                    <div class="slider"></div>
+                </nav>
+                <article>
+                    <div class="content content-1">
+                        <div class="title">This is a Home content</div>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero aspernatur nobis provident dolores molestias quia quisquam laborum, inventore quis, distinctioa, fugit repudiandae delectus sunt ipsam! Odio illo at quia doloremque fugit iops, asperiores? Consectetur esse officia labore voluptatum blanditiis molestias dic voluptas est, minima unde sequi, praesentium dicta suscipit quisquam iure sed, nemo.</p>
+                    </div>
+                    <div class="content content-2">
+                        <div class="title">This is a Blog content</div>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit amet. Possimus doloris nesciunt mollitia culpa sint itaque, vitae praesentium assumenda suscipit fugit doloremque adipisci doloribus, sequi facere itaque cumque accusamus, quam molestias sed provident quibusdam nam deleniti. Autem eaque aut impedit eo nobis quia, eos sequi tempore! Facere ex repellendus, laboriosam perferendise. Enim quis illo harum, exercitationem nam totam fugit omnis natus quam totam, repudiandae dolor laborum! Commodi?</p>
+                    </div>
+                    <div class="content content-3">
+                        <div class="title">This is a Code content</div>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure, debitis nesciunt! Consectetur officiis, libero nobis dolorem pariatur quisquam temporibus. Labore quaerat neque facere itaque laudantium odit veniam consectetur numquam delectus aspernatur, perferendis repellat illo sequi excepturi quos ipsam aliquid est consequuntur.</p>
+                    </div>
+                    <div class="content content-4">
+                        <div class="title">This is a Help content</div>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim reprehenderit null itaq, odio repellat asperiores vel voluptatem magnam praesentium, eveniet iure ab facere officiis. Quod sequi vel, rem quam provident soluta nihil, eos. Illo oditu omnis cumque praesentium voluptate maxime voluptatibus facilis nulla ipsam quidem mollitia! Veniam, fuga, possimus. Commodi, fugiat aut ut quorioms stu necessitatibus, cumque laborum rem provident tenetur.</p>
+                    </div>
+                    <div class="content content-5">
+                        <div class="title">This is a About content</div>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur officia sequi aliquam. Voluptatem distinctio nemo culpa veritatis nostrum fugit rem adipisci ea ipsam, non veniam ut aspernatur aperiam assumenda quis esse soluta vitae, placeat quasi. Iste dolorum asperiores hic impedit nesciunt atqu, officia magnam commodi iusto aliquid eaque, libero.</p>
+                    </div>
+                </article>
             </div>
         </section>
         <!--Serviços-->
@@ -225,18 +222,23 @@
                     Entrar em contato<span>.</span>
                 </h1>
             </div>
+            <P>
+                Embora eu não esteja procurando novas oportunidades, minha caixa de entrada está sempre aberta. Se você tem uma pergunta ou apenas quer dizer oi, vou tentar o meu melhor para responder a você!
+            </P>
             <div class="btn-links-project arquivo">
                 <div class="btn-animado">
                     <a href="#">Diga Olá</a>
                 </div>
             </div>
         </section>
-
+        <div class="myemail">
+            <a href="mailto:muambalas@gmail.com">muambalas@gmail.com</a><hr>
+        </div>
         <footer>
             <div class="rodape-layout">
                 <p>© 2022 nicodesn.com</p>
                 <div>
-                    <p>Projetado e construído por Samuel Nicolau.</p>
+                    <p>Powered by nicodesn</p>
                 </div>
             </div>
         </footer>
