--- a/index.html
+++ b/index.html
@@ -112,35 +112,35 @@
                 <input type="radio" name="slider" id="btn-css">
                 <input type="radio" name="slider" id="btn-js">
                 <input type="radio" name="slider" id="btn-bs">
-                <input type="radio" name="slider" id="btn-node">
                 <nav>
                     <label for="btn-html" class="btn-html">Html</label>
                     <label for="btn-css" class="btn-css">Css</label>
                     <label for="btn-js" class="btn-js">JavaScript</ion-icon></label>
                     <label for="btn-bs" class="btn-bs">Boostrap</label>
-                    <label for="btn-node" class="btn-node">Github</label>
                     <div class="slider"></div>
                 </nav>
                 <article>
                     <div class="content content-1">
-                        <div class="title">This is a Home content</div>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero aspernatur nobis provident dolores molestias quia quisquam laborum, inventore quis, distinctioa, fugit repudiandae delectus sunt ipsam! Odio illo at quia doloremque fugit iops, asperiores? Consectetur esse officia labore voluptatum blanditiis molestias dic voluptas est, minima unde sequi, praesentium dicta suscipit quisquam iure sed, nemo.</p>
+                        <a href="https://developer.mozilla.org/pt-BR/docs/Web/HTML" target="_blank">
+                            HTML é uma linguagem na qual a maioria dos sites são escritos . HTML é usado para criar páginas e torná-las funcionais.
+                        </a>
                     </div>
                     <div class="content content-2">
-                        <div class="title">This is a Blog content</div>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit amet. Possimus doloris nesciunt mollitia culpa sint itaque, vitae praesentium assumenda suscipit fugit doloremque adipisci doloribus, sequi facere itaque cumque accusamus, quam molestias sed provident quibusdam nam deleniti. Autem eaque aut impedit eo nobis quia, eos sequi tempore! Facere ex repellendus, laboriosam perferendise. Enim quis illo harum, exercitationem nam totam fugit omnis natus quam totam, repudiandae dolor laborum! Commodi?</p>
+                        <a href="https://developer.mozilla.org/pt-BR/docs/Web/CSS" target="_blank">
+                            CSS é a linguagem usada para estilizar a apresentação visual das páginas da web. Ela tem o objetivo de dizer aos navegadores da web como renderizar as diferentes partes de uma página da web.
+                        </a>
                     </div>
                     <div class="content content-3">
-                        <div class="title">This is a Code content</div>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure, debitis nesciunt! Consectetur officiis, libero nobis dolorem pariatur quisquam temporibus. Labore quaerat neque facere itaque laudantium odit veniam consectetur numquam delectus aspernatur, perferendis repellat illo sequi excepturi quos ipsam aliquid est consequuntur.</p>
+                       <a href="https://developer.mozilla.org/pt-BR/docs/Glossary/JavaScript" target="_blank">
+                            "JavaScript é uma linguagem de programação, leve, interpretada, orientada a objetos, baseada em protótipos e em first-class functions (funções de primeira classe), mais conhecida como a linguagem de script da Internet."
+                            <br>
+                            Ela pode ser executada em navegadores e manipular comportamentos de páginas web.
+                        </a>
                     </div>
                     <div class="content content-4">
-                        <div class="title">This is a Help content</div>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim reprehenderit null itaq, odio repellat asperiores vel voluptatem magnam praesentium, eveniet iure ab facere officiis. Quod sequi vel, rem quam provident soluta nihil, eos. Illo oditu omnis cumque praesentium voluptate maxime voluptatibus facilis nulla ipsam quidem mollitia! Veniam, fuga, possimus. Commodi, fugiat aut ut quorioms stu necessitatibus, cumque laborum rem provident tenetur.</p>
-                    </div>
-                    <div class="content content-5">
-                        <div class="title">This is a About content</div>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur officia sequi aliquam. Voluptatem distinctio nemo culpa veritatis nostrum fugit rem adipisci ea ipsam, non veniam ut aspernatur aperiam assumenda quis esse soluta vitae, placeat quasi. Iste dolorum asperiores hic impedit nesciunt atqu, officia magnam commodi iusto aliquid eaque, libero.</p>
+                        <a href="https://getbootstrap.com/" target="_blank">
+                            Bootstrap é um framework CSS - uma coleção de ferramentas HTML, CSS e JavaScript para criar e construir páginas da web e aplicativos da web responsivos e mobile-first. É um framework gratuito e de código aberto, hospedado no GitHub e originalmente criado para o Twitter.
+                        </a>
                     </div>
                 </article>
             </div>
@@ -153,7 +153,6 @@
             <div class="containerMax">
                 <div class="box-service">
                     <ion-icon name="laptop-outline"></ion-icon>
-
                     <h4>Desenvolvimento</h4>
                     <p>Desenvolvo de sites profissionais, blogs, portfólios, landing pages e e-commerce.</p>
                 </div>
@@ -223,11 +222,11 @@
                 </h1>
             </div>
             <P>
-                Embora eu não esteja procurando novas oportunidades, minha caixa de entrada está sempre aberta. Se você tem uma pergunta ou apenas quer dizer oi, vou tentar o meu melhor para responder a você!
+                Minha caixa de entrada está sempre aberta. Se você tem uma pergunta ou querendo conversar, estarei do outro lado respondendo suas mensagens!
             </P>
             <div class="btn-links-project arquivo">
                 <div class="btn-animado">
-                    <a href="#">Diga Olá</a>
+                    <a href="mailto:muambalas@gmail.com">Diga Olá</a>
                 </div>
             </div>
         </section>
