--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                             </p>
                         </div>
                         <div class="btn-animado">
-                            <a href="#">Baixar CV</a>
+                            <a href="#">Resumo</a>
                         </div>
                     </div>
                     <div id="profile-foto" class="col">
@@ -94,7 +94,7 @@
             <div class="content-columns">
                 <article class="colunas">
                     <p>
-                        Samuel ou "NICODE-SN" é um estudante de Tecnologias e inovações, todo o seu interesse por esta área deve se pelo fato de gostar de expressar as suas ideias por intermédio da tecnologia que é o melhor meio para ele expressar os seus sentimentos e compartilhar com o mundo.
+                        Samuel ou "Nicodesn" é um estudante de Tecnologias e inovações, todo o seu interesse por esta área deve se pelo fato de gostar de expressar as suas ideias por intermédio da tecnologia que é o melhor meio para ele expressar os seus sentimentos e compartilhar com o mundo.  Aspiro a uma carreira que me permita canalizar minha criatividade através da criação de belos softwares e experiências envolventes.
                     </p>
                 </article>
                 <div class="colunas">
@@ -179,7 +179,7 @@
             </div>
             <div class="btn-links-project arquivo">
                 <div class="btn-animado">
-                    <a href="#">Ver Arquivos</a>
+                    <a href="sotao/sota.html">Sótão</a>
                 </div>
             </div>
             <div class="containerMax">
@@ -226,7 +226,9 @@
             </P>
             <div class="btn-links-project arquivo">
                 <div class="btn-animado">
-                    <a href="mailto:muambalas@gmail.com">Diga Olá</a>
+                    <a href="mailto:muambalas@gmail.com">
+                        Diga Olá
+                    </a>
                 </div>
             </div>
         </section>
@@ -234,6 +236,32 @@
             <a href="mailto:muambalas@gmail.com">muambalas@gmail.com</a><hr>
         </div>
         <footer>
+            <ul class="nav-list-social">
+                <li>
+                    <a href="https://www.linkedin.com/in/samuel-nicolau-muambala-b3b436200/" target="_blank">
+                        <i class="fab fa-linkedin-in"></i>
+                        <span><i class="fab fa-linkedin-in"></i></span>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.facebook.com/daimon.esloton/" target="_blank">
+                        <i class="fab fa-facebook-f"></i>
+                        <span><i class="fab fa-facebook-f"></i></span>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.instagram.com/d.esloton/?hl=pt" target="_blank">
+                        <i class="fab fa-instagram"></i>
+                        <span><i class="fab fa-instagram"></i></span>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://twitter.com/DaimonEsloton" target="_blank">
+                        <i class="fab fa-github"></i>
+                        <span><i class="fab fa-github"></i></span>
+                    </a>
+                </li>
+            </ul> 
             <div class="rodape-layout">
                 <p>© 2022 nicodesn.com</p>
                 <div>
