--- a/index.html
+++ b/index.html
@@ -88,17 +88,19 @@
             </div>
         </section>
         <section id="about">
-            <div class="col-12">
-                <h1 class="main-title">Quem é Samuel <span>.</span></h1>
-            </div>
-            <div class="content-columns">
-                <article class="colunas">
-                    <p>
-                        Samuel ou "Nicodesn" é um estudante de Tecnologias e inovações, todo o seu interesse por esta área deve se pelo fato de gostar de expressar as suas ideias por intermédio da tecnologia que é o melhor meio para ele expressar os seus sentimentos e compartilhar com o mundo.  Aspiro a uma carreira que me permita canalizar minha criatividade através da criação de belos softwares e experiências envolventes.
-                    </p>
-                </article>
-                <div class="colunas">
-                    <img class="img-user" src="assets/img/goku.png" alt="samuel nicolau" title="Samuel Nicolau">
+            <div class="container">
+                <div class="col-12">
+                    <h1 class="main-title">Quem é Samuel <span>.</span></h1>
+                </div>
+                <div class="content-columns">
+                    <article class="colunas">
+                        <p>
+                            Samuel ou "Nicodesn" é um estudante de Tecnologias e inovações, todo o seu interesse por esta área deve se pelo fato de gostar de expressar as suas ideias por intermédio da tecnologia que é o melhor meio para ele expressar os seus sentimentos e compartilhar com o mundo.  Aspiro a uma carreira que me permita canalizar minha criatividade através da criação de belos softwares e experiências envolventes.
+                        </p>
+                    </article>
+                    <div class="colunas">
+                        <img class="img-user" src="assets/img/goku.png" alt="samuel nicolau" title="Samuel Nicolau">
+                    </div>
                 </div>
             </div>
         </section>
