--- a/sotao/sota.html
+++ b/sotao/sota.html
@@ -67,7 +67,7 @@
                     <p>É aqui no meu Sótão onde guardo os links de outros projetos.</p>
                 </h1>
             </div>
-            <div class="content-table">
+            <div class="container">
                 <table>
                     <thead>
                         <tr>
@@ -80,21 +80,21 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <td>2022</td>
+                            <td class="first-box">2022</td>
                             <td>Portfólio</td>
                             <td>Vscode</td>
                             <td>HTML - CSS - JS - Boostrap</td>
-                            <td>
+                            <td class="last-box">
                                 <ion-icon name="open-outline"></ion-icon>
                                 <ion-icon name="logo-github"></ion-icon>
                             </td>
                         </tr>
                         <tr>
-                            <td>2021</td>
+                            <td class="first-box">2021</td>
                             <td>Leitor</td>
                             <td>Vscode</td>
                             <td>HTML - CSS - JS</td>
-                            <td>
+                            <td class="last-box">
                                 <ion-icon name="open-outline"></ion-icon>
                                 <ion-icon name="logo-github"></ion-icon>
                             </td>
