--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                         </p>
                     </article>
                     <div class="colunas">
-                        <img class="img-user" src="assets/img/goku.png" alt="samuel nicolau" title="Samuel Nicolau">
+                        <img class="img-user" src="assets/img/heidy.png" alt="samuel nicolau" title="Samuel Nicolau">
                     </div>
                 </div>
             </div>
